hard-gists/ee05163d448353af4c260c544db4d6b2/run.log
=== Docker Run Log for ee05163d448353af4c260c544db4d6b2 ===
Started at: Mi 29. Okt 21:02:50 CET 2025

[2025-10-29 21:02:51] START: Running container for ee05163d448353af4c260c544db4d6b2
[2025-10-29 21:02:51] SUCCESS: Container e811b0f75b1778daa75a701710d27dcf3590acd561acf95ba2b06dbb83277167 started for ee05163d448353af4c260c544db4d6b2
=== Container logs for ee05163d448353af4c260c544db4d6b2 ===
  File "/snippet.py", line 8
    print x.size(), 'after', layername
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ee05163d448353af4c260c544db4d6b2 ===
[2025-10-29 21:02:53] INFO: Container e811b0f75b1778daa75a701710d27dcf3590acd561acf95ba2b06dbb83277167 has stopped
